# Apiro

./: .dockerignore  .gitignore  DEVELOPER_NOTES.md  Dockerfile  Log.md  PROJECT_STATUS.md  README.md  config.py  eval_output.txt  pyproject.toml  requirements.txt  run_eval.sh  structure.txt  test_nli.py  test_nli2.py
apiro/: __init__.py  apiro_detailed_test_cases.html  config.py  run.py
apiro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apiro/axioms/: __init__.py  extractor.py  lab_parser.py  models.py  negation.py  ner.py  weighter.py
apiro/corpus/: build_corpus.py  chunker.py  clinical_case_adapter.py  (+1 more)
corpus/: __init__.py  build_corpus.py  chunker.py  embedder.py
data/: axiom_weights.yaml  distractor_cases.json  edar_eval_results.json  graph_synthetic_case_1.json  phase3_results.json  pmc_cases.json  report.md  synthetic_case_1.json  traversal_log_ef_eval.jsonl  traversal_log_real_evaluation_case.jsonl  traversal_log_synthetic_case_1.jsonl  unseen_cases.json
docker/: entrypoint.sh
entropy/: engine.py
graph/: __init__.py  belief_graph.py  edge.py  node.py  rabbit_hole.py  saturation.py
scratch/: debug_case_10.py  test_logprobs.py
scripts/: app.py  build_disease_index.py  dry_run.py  enrich_corpus_ner.py  generate_pmc_cases.py  generate_unseen.py  inspect_metadata.py  investigate.py  investigate_edar.py  repair_corpus.py  run_distractor_eval.py  run_edar_eval.py  run_phase3_eval.py  run_pmc_eval.py  run_unseen_eval.py  visualize_graph.py
tests/: test_corpus.py  test_graph.py  test_html_spec.py  test_mimic_adapter.py  test_oracle.py  test_phase2.py
(+123 files in other folders)
